--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,4 @@
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Linker files
-*.ilk
-
-# Debugger Files
-*.pdb
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
+# ... [Contenido existente del .gitignore] ...
 
 # Executables
 *.exe
@@ -40,5 +8,8 @@
 # debug information files
 *.dwo
 
-# Object files
-obj/
+# TALLER SIMD (Archivos ignorados específicamente para este proyecto)
+case_converter              # Ejecutable principal
+performance_results.csv     # Resultados de benchmarks
+obj/                       # Directorio de objetos compilados (ya cubierto por *.o, pero más seguro)
+graphics/                  # Directorio de gráficos generados
